--- a/index.html
+++ b/index.html
@@ -1,12 +1,162 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Matthew McGraw — Portfolio</title>
-  </head>
-  <body>
-    <h1>Matthew McGraw</h1>
-    <p>Portfolio coming online.</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Matthew McGraw — Portfolio</title>
+  <meta name="description" content="Projects and write-ups by Matthew McGraw." />
+  <link rel="stylesheet" href="/style.css" />
+</head>
+
+<body>
+  <a class="skip-link" href="#content">Skip to Content</a>
+
+  <header class="site-header">
+    <div class="container header-inner">
+      <a class="brand" href="/">Matthew McGraw</a>
+
+      <nav class="nav">
+        <a href="/" aria-current="page">Home</a>
+        <a href="/projects/">Projects</a>
+      </nav>
+
+      <div class="social">
+        <!-- Replace hrefs with yours -->
+        <a class="icon-btn" href="https://instagram.com/" target="_blank" rel="noreferrer" aria-label="Instagram">
+          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M7.5 2h9A5.5 5.5 0 0 1 22 7.5v9A5.5 5.5 0 0 1 16.5 22h-9A5.5 5.5 0 0 1 2 16.5v-9A5.5 5.5 0 0 1 7.5 2Zm0 2A3.5 3.5 0 0 0 4 7.5v9A3.5 3.5 0 0 0 7.5 20h9a3.5 3.5 0 0 0 3.5-3.5v-9A3.5 3.5 0 0 0 16.5 4h-9ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Zm6.3-2.15a1.15 1.15 0 1 1 0 2.3 1.15 1.15 0 0 1 0-2.3Z"/></svg>
+        </a>
+
+        <a class="icon-btn" href="https://linkedin.com/" target="_blank" rel="noreferrer" aria-label="LinkedIn">
+          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M4.98 3.5A2.5 2.5 0 1 1 5 8.5a2.5 2.5 0 0 1-.02-5ZM3.5 9h3v12h-3V9Zm7 0h2.9v1.64h.04c.4-.76 1.38-1.56 2.84-1.56 3.04 0 3.6 2 3.6 4.6V21h-3v-6.2c0-1.48-.03-3.38-2.06-3.38-2.06 0-2.38 1.6-2.38 3.27V21h-3V9Z"/></svg>
+        </a>
+
+        <a class="icon-btn" href="https://youtube.com/" target="_blank" rel="noreferrer" aria-label="YouTube">
+          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M21.6 7.2a3 3 0 0 0-2.1-2.1C17.6 4.6 12 4.6 12 4.6s-5.6 0-7.5.5A3 3 0 0 0 2.4 7.2 31.7 31.7 0 0 0 2 12a31.7 31.7 0 0 0 .4 4.8 3 3 0 0 0 2.1 2.1c1.9.5 7.5.5 7.5.5s5.6 0 7.5-.5a3 3 0 0 0 2.1-2.1A31.7 31.7 0 0 0 22 12a31.7 31.7 0 0 0-.4-4.8ZM10 15.5v-7l6 3.5-6 3.5Z"/></svg>
+        </a>
+
+        <a class="icon-btn" href="https://x.com/" target="_blank" rel="noreferrer" aria-label="X">
+          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M18.9 2H22l-6.8 7.8L23.2 22h-6.7l-5.3-6.6L5.4 22H2.2l7.3-8.4L1 2h6.9l4.8 6.1L18.9 2Zm-1.2 18h1.8L6.2 3.9H4.3L17.7 20Z"/></svg>
+        </a>
+      </div>
+    </div>
+  </header>
+
+  <main id="content">
+    <section class="hero">
+      <div class="container hero-inner">
+        <div class="hero-media">
+          <!-- Put your image at /assets/portrait.jpg (or change the src) -->
+          <img src="/assets/portrait.jpg" alt="Portrait of Matthew McGraw" loading="eager" />
+        </div>
+
+        <div class="hero-copy">
+          <h1>Matthew McGraw</h1>
+          <p class="kicker">Engineer / Builder / [Your tagline]</p>
+
+          <p class="lede">
+            Write a short “who you are” paragraph here. Keep it 2–4 sentences, like:
+            what you build, what you care about, and what kinds of projects you want to do more of.
+          </p>
+
+          <p class="lede">
+            Add a second paragraph if you want—what you’re currently working on, or what this site contains
+            (project write-ups, demos, links, etc.).
+          </p>
+
+          <div class="cta-row">
+            <a class="btn" href="https://youtube.com/" target="_blank" rel="noreferrer">YouTube Channel</a>
+            <a class="btn btn-ghost" href="/assets/Matthew-McGraw-Resume.pdf" target="_blank" rel="noreferrer">Resume</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container section-head">
+        <h2>Latest Projects</h2>
+        <a class="text-link" href="/projects/">View all Projects</a>
+      </div>
+
+      <div class="container cards">
+        <!-- Project card (duplicate as needed) -->
+        <a class="card" href="https://github.com/" target="_blank" rel="noreferrer">
+          <div class="card-top">
+            <h3>Project Name</h3>
+            <span class="pill">2026</span>
+          </div>
+          <p>One sentence: what it is + what you did + why it matters.</p>
+          <div class="card-meta">
+            <span>Tech: Python, CAD, etc.</span>
+            <span>Link →</span>
+          </div>
+        </a>
+
+        <a class="card" href="https://github.com/" target="_blank" rel="noreferrer">
+          <div class="card-top">
+            <h3>Another Project</h3>
+            <span class="pill">2025</span>
+          </div>
+          <p>Short description. Keep it tight so the grid stays clean.</p>
+          <div class="card-meta">
+            <span>Tech: React, C++, etc.</span>
+            <span>Link →</span>
+          </div>
+        </a>
+
+        <a class="card" href="https://github.com/" target="_blank" rel="noreferrer">
+          <div class="card-top">
+            <h3>Third Project</h3>
+            <span class="pill">2025</span>
+          </div>
+          <p>Short description.</p>
+          <div class="card-meta">
+            <span>Tech: ESP32, Fusion, etc.</span>
+            <span>Link →</span>
+          </div>
+        </a>
+      </div>
+    </section>
+
+    <section class="section support">
+      <div class="container support-inner">
+        <h2>How to Support</h2>
+        <p>
+          Put your “support” blurb here (newsletter, GitHub sponsors, Patreon, hiring, collabs, etc.).
+          Keep it friendly and direct.
+        </p>
+        <a class="btn" href="https://github.com/sponsors/" target="_blank" rel="noreferrer">Support / Sponsor</a>
+      </div>
+    </section>
+
+    <footer class="site-footer">
+      <div class="container footer-inner">
+        <div class="footer-left">
+          <p class="footer-title">Matthew McGraw</p>
+          <p class="footer-sub">Contact Me: <a class="text-link" href="mailto:you@email.com">you@email.com</a></p>
+        </div>
+
+        <div class="footer-right">
+          <div class="footer-links">
+            <a href="/">Home</a>
+            <a href="/projects/">Projects</a>
+          </div>
+          <div class="footer-links">
+            <a href="https://instagram.com/" target="_blank" rel="noreferrer">Instagram</a>
+            <a href="https://linkedin.com/" target="_blank" rel="noreferrer">LinkedIn</a>
+            <a href="https://youtube.com/" target="_blank" rel="noreferrer">YouTube</a>
+            <a href="https://x.com/" target="_blank" rel="noreferrer">X</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="container footer-bottom">
+        <span>© <span id="y"></span> Matthew McGraw</span>
+      </div>
+    </footer>
+  </main>
+
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
+</body>
 </html>
